--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     font-family: Roboto, sans-serif;
     font-size: 1.5rem;
     margin: 0.83rem;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -41,7 +42,7 @@ p, ul, ol {
 }
 
 img{
-    margin-top: 2rem;
     max-width: 100%;
     height: auto;
+    box-sizing: border-box;
 }
