--- a/greg-css/greg_style.css
+++ b/greg-css/greg_style.css
@@ -83,7 +83,7 @@ img{
 .showcase-mid{
     grid-area: showcase-mid;
     min-height: 300px;
-    background-image: url(greg_img/img/Extra_Images/Concord_Pacific_Master_Plan_Area_CROPPED_DARK.jpg);
+    background-image: url();
     background-size: 1700px;
     background-image:cover;
     background-position: center;
