--- a/greg-css/greg_style.css
+++ b/greg-css/greg_style.css
@@ -102,7 +102,7 @@ p{
 .showcase-mid{
     grid-area: showcase-mid;
     min-height: 300px;
-    background-image: url(img/Extra_Images/Concord_Pacific_Master_Plan_Area_CROPPED_DARK.jpg);
+    background-image: url(../greg_img/img/Extra_Images/Concord_Pacific_Master_Plan_Area_CROPPED_DARK.jpg);
     background-size: 1700px;
     background-image:cover;
     background-position: center;
@@ -167,7 +167,7 @@ p{
     min-height: 100px;
     max-height: 400px;
     max-width: 1400px;
-    background-image: url(img/Extra_Images/handshake_DARK.jpg);
+    background-image: url(../greg_img/img/Extra_Images/handshake_DARK.jpg);
     background-size: cover;
     background-image: cover;
     background-position: center;
