--- a/greg-css/greg_style.css
+++ b/greg-css/greg_style.css
@@ -150,7 +150,10 @@ p{
     box-shadow:var(--shadow);
     max-width: 30rem;
     max-height: 40rem;
+}
 
+.box_center{
+    justify-self: center;
 }
 
 .box-img{
