--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -141,6 +141,19 @@ p{
     grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
 }
 
+/*If you want edge bleed boxes with margin */
+
+.box_fill{
+    align-items: baseline;
+    background: var(--light);
+    text-align: left;
+    text-justify: inter-cluster;
+    padding: 1rem 1rem;
+    box-shadow:var(--shadow);
+    max-width: 100%;
+    max-height: 40rem;
+}
+
 .box_extend{
     align-items: baseline;
     background: var(--light);
@@ -175,6 +188,15 @@ p{
     object-fit: cover;
 }
 
+/* If you want end bleed image with margin*/
+
+.box_img_fill{
+    width: max-content;
+    height: 500px;
+    min-width: 250px;
+    max-height: 500px;
+    object-fit:cover;
+}
 
 /* Partnership Info */
 .info{
