--- a/jonathan_css/jonathan.css
+++ b/jonathan_css/jonathan.css
@@ -182,7 +182,6 @@ p{
     min-height: 300px;
     background-image: url(../Image/pawel-czerwinski--0xCCPIbl3M-unsplash.jpg);
     background-size: 1700px;
-    background-image:cover;
     background-position: center;
     padding: 3rem;
     display: flex;
@@ -278,13 +277,9 @@ p{
 
 /* Partnership Info */
 .info{
-    justify-self: center;
     min-height: 100px;
-    max-height:auto;
-    max-width: auto;
     background-image: url(../Image/SchoolDropOffPickup.jpg);
     background-size: cover;
-    background-image: cover;
     background-position: center;
     padding: 3rem;
     display: grid;
@@ -296,13 +291,9 @@ p{
 }
 
 .info2{
-    justify-self: center;
     min-height: 100px;
-    max-height:auto;
-    max-width: auto;
     background-image: url(../Image/contact-us-banner-1024x286.jpg);
     background-size: cover;
-    background-image: cover;
     background-position: center;
     padding: 3rem;
     display: grid;
@@ -311,18 +302,12 @@ p{
     color: var(--light);
     justify-items: left;
     margin-bottom: 1rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
 }
 
 .info3{
-    justify-self: center;
     min-height: 100px;
-    max-height: auto;
-    max-width: auto;
     background-image: url(../Image/moveit-banner.jpg);
     background-size: cover;
-    background-image: cover;
     background-position: center;
     padding: 3rem;
     display: grid;
@@ -331,9 +316,7 @@ p{
     color: var(--light);
     justify-items: left;
     margin-bottom: 1rem;
-    margin-top: 3rem;'
-    padding-left: 3rem;
-    padding-right: 3rem;
+    margin-top: 3rem;
 }
 
 /* Footer */
