--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -28,6 +28,11 @@ body{
     border: 0;
 }
 
+.btn:hover{
+    background:var(--light);
+    color: var(--dark);
+}
+
 img{
     max-width: 100%;
     max-height: 100%;
