--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -29,6 +29,10 @@ a:hover{
     text-decoration: underline;
 }
 
+.inline_link{
+    text-decoration: underline;
+}
+
 .btn{
     background-color: var(--dark);
     color: var(--light);
