--- a/jonathan_css/jonathan.css
+++ b/jonathan_css/jonathan.css
@@ -88,17 +88,33 @@ p{
 }
 
 .boxCenter {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.floatRight {
-    text-align: Right;
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
+}
+
+.floatRight {
+    text-align: right;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.box_info{
+    min-height: 100px;
+    background: var(--light);
+    padding: 3rem;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(2,1fr);
+    color: var(--light);
+    justify-items: left;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .wrapper{
@@ -193,7 +209,7 @@ p{
 .showcase-mid{
     grid-area: showcase-mid;
     min-height: 300px;
-    background-image: url(../Image/pawel-czerwinski--0xCCPIbl3M-unsplash.jpg);
+    background-image: url(../Image/pawel-czerwinski--0xCCPIbl3M-unsplash2.jpg);
     background-size: 1700px;
     background-position: center;
     padding: 3rem;
@@ -314,7 +330,6 @@ p{
     grid-template-columns: repeat(2,1fr);
     color: var(--light);
     justify-items: left;
-    margin-bottom: 1rem;
 }
 
 .info3{
@@ -329,7 +344,7 @@ p{
     color: var(--light);
     justify-items: left;
     margin-bottom: 1rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 /* Footer */
