--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -150,6 +150,7 @@ p{
     grid-area: showcase-mid;
     min-height: 300px;
     background-image: url(../greg_img/img/Extra_Images/Concord_Pacific_Master_Plan_Area_CROPPED_DARK.jpg);
+    /* Photo via https://upload.wikimedia.org/wikipedia/commons/5/57/Concord_Pacific_Master_Plan_Area.jpg */
     background-size: 1700px;
     background-image:cover;
     background-position: center;
@@ -247,11 +248,11 @@ p{
 
 /* Partnership Info */
 .info{
-    justify-self: center;
     min-height: 100px;
     max-height:auto;
     max-width: auto;
     background-image: url(../greg_img/img/Extra_Images/handshake_DARK.jpg);
+    /* Photo via https://d18lkz4dllo6v2.cloudfront.net/cumulus_uploads/entry/2020-11-04/GettyImages-678074927.jpg */
     background-size: cover;
     background-image: cover;
     background-position: center;
