actionplan center fixes

--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -1,9 +1,9 @@
 /* CSS Variables declared here, they are the colours we will be using throughout the page */
 
 :root{
-    --primary:  rgb(240, 240, 240);
-    --dark:     rgb(62, 67, 82);
-    --light:    rgb(231, 231, 231);
+    --primary: rgb(240, 240, 240);
+    --dark: rgb(62, 67, 82);
+    --light: rgb(231, 231, 231);
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.5);
 }
 
@@ -20,33 +20,12 @@ body{
     line-height: 1.6rem;
 }
 
-a{
-    color: var(--light);
-    text-decoration: none;
-}
-
-a:hover{
-    text-decoration: underline;
-}
-
-.inline_link{
-    text-decoration: underline;
-}
-
 .btn{
     background-color: var(--dark);
     color: var(--light);
     padding: 0.6rem 1.3rem;
     text-decoration: none;
-    text-align: center;
     border: 0;
-    max-width: 10rem;
-}
-
-.btn:hover{
-    background:var(--light);
-    color: var(--dark);
-    text-decoration: none;
 }
 
 img{
@@ -79,6 +58,10 @@ h4{
 p{
     font-size: 1.1rem;
     margin-top: 0;
+}
+
+.center-text{
+    text-align: center;
 }
 
 .wrapper{
@@ -188,6 +171,10 @@ p{
     grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
 }
 
+.box-margin-top{
+    margin-top: 1rem;
+}
+
 /*If you want edge bleed boxes with margin */
 
 .box_fill{
@@ -247,7 +234,6 @@ p{
 
 /* Partnership Info */
 .info{
-    justify-self: center;
     min-height: 100px;
     max-height:auto;
     max-width: auto;
@@ -270,7 +256,6 @@ footer{
     background: var(--dark);
     color: var(--light);
     text-align: center;
-    text-decoration: none;
 }
 
 
