--- a/jonathan_css/jonathan.css
+++ b/jonathan_css/jonathan.css
@@ -117,6 +117,17 @@ p{
     margin-top: 1rem;
 }
 
+.boxWhite{
+    align-items: baseline;
+    background: var(White);
+    text-align: left;
+    text-justify: inter-cluster;
+    padding: 1rem 1rem;
+    box-shadow:var(--shadow);
+    max-width: 30rem;
+    max-height: 40rem;
+}
+
 .wrapper{
     display: grid;
 }
