added alt descriptios

--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -111,6 +111,7 @@ p{
 	right:40px;
 	background-color:var(--dark);
     background-image: url(../img/backtotop.png);
+    /*img from https://www.rndwafers.com/images/uparrow.png*/
     background-size: 80%;
     background-position: center;
 	color:#FFF;
