Convert px to rem in media queries and other

--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -484,7 +484,7 @@ footer{
 
 
 /* Media Queries */
-@media(max-width: 1150px){
+@media(max-width: 71.875rem){
     .main-nav ul{
         /* switch to 2 cols */
         grid-template-columns: 1fr 1fr;
@@ -503,7 +503,7 @@ footer{
     }
 }
 
-@media(max-width: 600px){
+@media(max-width: 37.5rem){
     .main-nav ul{
         grid-gap: 1rem;
         /* switch to 1 col */
@@ -531,7 +531,7 @@ footer{
     
 }
 
-@media(max-width: 1150px){
+@media(max-width: 71.875rem){
     .ini-main-nav ul{
         /* switch to 2 cols */
         grid-template-columns: 1fr 1fr;
@@ -550,7 +550,7 @@ footer{
     }
 }
 
-@media(max-width: 600px){
+@media(max-width: 37.5rem){
     .ini-main-nav ul{
         grid-gap: 1rem;
         /* switch to 1 col */
