--- a/greg_css/greg_style.css
+++ b/greg_css/greg_style.css
@@ -296,6 +296,20 @@ a.float:hover + div.label-container{
     object-fit: cover;
 }
 
+.box-img-link{
+    width: 500px;
+    height: 500px;
+    min-width: 250px;
+    max-height: 500px;
+    object-fit: cover;
+}
+
+
+.box-img-link:hover{
+    border: 2px solid var(--dark);
+    margin: -2px;
+}
+
 /* If you want end bleed image with margin*/
 
 .box_img_fill{
@@ -304,6 +318,19 @@ a.float:hover + div.label-container{
     min-width: 250px;
     max-height: 500px;
     object-fit:cover;
+}
+
+.box_img_fill_link{
+    width: 100%;
+    height: 500px;
+    min-width: 250px;
+    max-height: 500px;
+    object-fit:cover;
+}
+
+.box_img_fill_link:hover{
+    border: 2px solid var(--dark);
+    margin: -2px;
 }
 
 /* Partnership Info */
