Jonathan Updated CSS Final

--- a/jonathan_css/jonathan.css
+++ b/jonathan_css/jonathan.css
@@ -164,7 +164,7 @@ p{
 
 .boxWhite{
     align-items: baseline;
-    background: var(White);
+    background-color: white;
     text-align: left;
     padding: 1rem 1rem;
     box-shadow:var(--shadow);
